--- a/dataSlider.html
+++ b/dataSlider.html
@@ -6,15 +6,25 @@
     </style>
     </head>
 <body>
+
+<div id="slider_count"><span id="sliderPrice">0</span></div>
+
+    <input type="range" id="range-slider" value="0.0" min="0" max="5" step="0" />
+	
     <script src="js/jquery.min.js"></script>
-<input type="range" id="slider" min="0" max="15" step="1" value="0">
-	<output id="output"></output>
+
 		<script type="text/javascript">
-			var values = ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B", "C", "D", "E", "F"];
-		$('#slider').on('change input', function() {
-			var value = values[this.value];
-		$("#output").text(value);
-		}).change();
+var sizeRange = ["0","1","2","A","B","C"]
+
+$('#sliderPrice').html( sizeRange[0] );
+
+$(document).on('input change', '#range-slider', function() { 
+   var v=$(this).val();
+
+   //$('#sliderStatus').html( $(this).val() );
+   $('#sliderPrice').html( sizeRange[v] );
+
+});
     </script>
 </body>
 </html>
