first working colour example, red only

--- a/dataSlider.html
+++ b/dataSlider.html
@@ -2,40 +2,63 @@
 <html>
 <head>
     <style>
-        
+        body { background-color: lightblue}
     </style>
     </head>
 <body>
     <script src="js/jquery.min.js"></script>
-<input type="range" id="slider" min="0" max="15" step="1" value="0">
+<input type="range" style= "width: 400px;" id="slider" min="0" max="255" step="1" value="0">
 	<output id="output"></output>
 		<script type="text/javascript">
-			var hex1 = ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B", "C", "D", "E", "F"];
-		$('#slider').on('change input', function() {
+			var hex1 =
+			["0","0","0","0","0","0","0","0","0","0","0","0","0","0","0","0",
+			"1","1","1","1","1","1","1","1","1","1","1","1","1","1","1","1",
+			"2","2","2","2","2","2","2","2","2","2","2","2","2","2","2","2",
+			"3","3","3","3","3","3","3","3","3","3","3","3","3","3","3","3",
+			"4","4","4","4","4","4","4","4","4","4","4","4","4","4","4","4",
+			"5","5","5","5","5","5","5","5","5","5","5","5","5","5","5","5",
+			"6","6","6","6","6","6","6","6","6","6","6","6","6","6","6","6",
+			"7","7","7","7","7","7","7","7","7","7","7","7","7","7","7","7",
+			"8","8","8","8","8","8","8","8","8","8","8","8","8","8","8","8",
+			"9","9","9","9","9","9","9","9","9","9","9","9","9","9","9","9",
+			"A","A","A","A","A","A","A","A","A","A","A","A","A","A","A","A",
+			"B","B","B","B","B","B","B","B","B","B","B","B","B","B","B","B",
+			"C","C","C","C","C","C","C","C","C","C","C","C","C","C","C","C",
+			"D","D","D","D","D","D","D","D","D","D","D","D","D","D","D","D",
+			"E","E","E","E","E","E","E","E","E","E","E","E","E","E","E","E",
+			"F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F"];
+			var hex2 =
+			["0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
+			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F"];
+		$('#slider').on('change input', function getHexColours() {
 			var HEX1 = hex1[this.value];
-		$("#output").text(HEX1);
+			var HEX2 = hex2[this.value];
+		$("#output").text("#" + HEX1 + HEX2 + "0000");
+		document.body.style.background = "#" + HEX1 + HEX2 + "0000";
+		//return (output);
 		}).change();
+		
+		//function setBackground() {
+		//	var bgColour = getHexColours();
+		//	document.body.style.background = bgColour;
+		//	}
+		//	setBackground();
     </script>
 	
-	<script type='text/javascript'>
-function getNextMember(array, startIndex) {
-   startIndex = startIndex || 0;
-   return function() {
-      startIndex++;  
-      return array[startIndex];
-   };
-};
-var word = [
-   'is',
-   'am',
-   'a'
-];
-var getNextWord = getNextMember(hex1);
-document.writeln(getNextWord );
-document.writeln('<br/>');
 
-document.writeln(getNextWord() + ' ' + getNextWord());
-
-</script>
 </body>
 </html>
