making the gnarly array smaller using repeat

--- a/dataSlider.html
+++ b/dataSlider.html
@@ -7,56 +7,95 @@
     </head>
 <body>
     <script src="js/jquery.min.js"></script>
-<input type="range" style= "width: 400px;" id="slider" min="0" max="255" step="1" value="0">
+<input type="range" style= "width: 400px;" id="slider" min="0" max="15" step="1" value="0">
 	<output id="output"></output>
+	<div id="NEXT"></div>
+	<div id="hexi"></div>
+	<div id="hexLoop"></div>
 		<script type="text/javascript">
-			var hex1 =
-			["0","0","0","0","0","0","0","0","0","0","0","0","0","0","0","0",
-			"1","1","1","1","1","1","1","1","1","1","1","1","1","1","1","1",
-			"2","2","2","2","2","2","2","2","2","2","2","2","2","2","2","2",
-			"3","3","3","3","3","3","3","3","3","3","3","3","3","3","3","3",
-			"4","4","4","4","4","4","4","4","4","4","4","4","4","4","4","4",
-			"5","5","5","5","5","5","5","5","5","5","5","5","5","5","5","5",
-			"6","6","6","6","6","6","6","6","6","6","6","6","6","6","6","6",
-			"7","7","7","7","7","7","7","7","7","7","7","7","7","7","7","7",
-			"8","8","8","8","8","8","8","8","8","8","8","8","8","8","8","8",
-			"9","9","9","9","9","9","9","9","9","9","9","9","9","9","9","9",
-			"A","A","A","A","A","A","A","A","A","A","A","A","A","A","A","A",
-			"B","B","B","B","B","B","B","B","B","B","B","B","B","B","B","B",
-			"C","C","C","C","C","C","C","C","C","C","C","C","C","C","C","C",
-			"D","D","D","D","D","D","D","D","D","D","D","D","D","D","D","D",
-			"E","E","E","E","E","E","E","E","E","E","E","E","E","E","E","E",
-			"F","F","F","F","F","F","F","F","F","F","F","F","F","F","F","F"];
-			var hex2 =
-			["0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F",
-			"0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F"];
+			var hex =
+			["0","1","2","3","4","5","6","7","8","9","A","B","C","D","E","F"];
 		$('#slider').on('change input', function getHexColours() {
-			var HEX1 = hex1[this.value];
-			var HEX2 = hex2[this.value];
-		$("#output").text("#" + HEX1 + HEX2 + "0000");
-		document.body.style.background = "#" + HEX1 + HEX2 + "0000";
-		//return (output);
+			var HEX = hex[this.value];
+		$("#output").text("#" + HEX + HEX + "9999");
+		document.getElementById("hexi").innerHTML = "#" + HEX + HEX + "9999";
+		document.body.style.background = "#" + HEX + HEX + "9999";
 		}).change();
 		
-		//function setBackground() {
-		//	var bgColour = getHexColours();
-		//	document.body.style.background = bgColour;
-		//	}
-		//	setBackground();
+		var Current = 0;
+		document.getElementById("NEXT").innerHTML = hex[Current];
+		
+		$('#slider').on('change input', function Next() {
+		if (Current == hex.length - 1){
+        Current = 0}
+		else {
+			Current++;}
+		document.getElementById("NEXT").innerHTML = hex[Current];
+		}).change();
+
+		//var count = 5;
+		function loopFunction(){
+		var hex1 = "";
+		var hex2 = "";
+		var i;
+		for (var i = 0; i < hex.length; i++) {//count; i++) {
+			//doSomething();
+			hex1 += hex[0];
+			hex2 += hex[1];
+		}
+			document.getElementById("hexLoop").innerHTML = hex1 + hex2;
+		}
+		
+		loopFunction();
+		//////////////////////////////////////
+		function doSomething() {
+			document.writeln (hex[15]);//("hello!");
+		}
+		
+		///////////////////////////////////
+		const alphabet = '0123456789ABCDEF';
+
+		const hexx = Array.from(alphabet.repeat(16));
+		
+		document.writeln(hexx)
+		
+		/////////////////////////////
+
+		const valueList = Array.from(alphabet);
+
+		const hexxx = new Array(16).fill(valueList);
+		
+		document.writeln(hexxx)
+		
+		////////////////////////////
+
+		let hexxxx = [];
+
+		Array.from(alphabet).forEach(letter =>
+		(hexxxx = hexxxx.concat(Array.from(letter.repeat(16)))));
+		
+		document.writeln(hexxxx)
+		
+		////////////////////////////////
+		const multiples = x => f => {
+		
+		if (x > 0) {
+			f() //empty value
+			multiples (x - 1) (f)
+		  }
+		}
+
+
+		multiples (16) (() => document.writeln (hex[0]))
+		multiples (16) (() => document.writeln (hex[1]))
+		multiples (16) (() => document.writeln (hex[2]))
+		multiples (16) (() => document.writeln (hex[15]))
+
+
+		
+		
+		
+
     </script>
 	
 
